MDEV-37453 Parallel slave worker crashes during Backup at retrying

In the BASE of this commit when a slave parallel worker proceeds from
the wait-for-prior-commit stage into retrying it may have its
backup-lock related sub-state in THD::backup_commit_lock not reset.
That caused the segfault error because of non-NULL value leads to
accessing already deallocated memory.

Fixed with amendment of `backup_commit_lock` reset condition
at the end of ha_commit_trans(). A test is added to confirm the fixes.